[gd_scene load_steps=2 format=2]

[ext_resource path="res://BuySellDrugDialog.gd" type="Script" id=1]

[node name="BuySellDrugDialog" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 508.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrugNameLabel" type="Label" parent="VBoxContainer"]
margin_right = 504.0
margin_bottom = 14.0
text = "Drug to Buy:"

[node name="DrugAmountSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 504.0
margin_bottom = 34.0

[node name="CurrentDrugAmount" type="Label" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 504.0
margin_bottom = 52.0
text = "Current: 1"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 504.0
margin_bottom = 76.0

[node name="BuyDrugButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 20.0
text = "Buy"

[node name="SellDrugButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_right = 12.0
margin_bottom = 20.0
text = "Sell"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 87.0
margin_bottom = 20.0
text = "Close"

[connection signal="value_changed" from="VBoxContainer/DrugAmountSlider" to="." method="_on_DrugAmountSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BuyDrugButton" to="." method="_on_BuyDrugButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SellDrugButton" to="." method="_on_SellDrugButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
